закончил фаворит + правки

--- a/src/components/filterAndTabs/filterAndTabs.module.css
+++ b/src/components/filterAndTabs/filterAndTabs.module.css
@@ -39,6 +39,20 @@
     user-select: none;
 }
 
+.tabtitle{
+    transition: var(--transition);
+    display: block;
+}
+
+.tab:hover .tabtitle{
+    transform: translateY(-5px);   
+}
+
+.tab:hover{
+    color: var(--green);
+    border-color: var(--green);
+}
+
 .tabselected {
     color: var(--blue-text);
     background-color: transparent;
@@ -46,6 +60,11 @@
     padding-bottom: 17.5px;
     transition: var(--transition);
     border-bottom-color: var(--blue);
+}
+
+.tabselected:hover{
+    color: var(--blue-hover);
+    border-color: var(--blue-hover);
 }
 
 .navLine {
