--- a/src/components/newsGrid/newsGrid.module.css
+++ b/src/components/newsGrid/newsGrid.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
 
 .container {
@@ -29,6 +30,9 @@
     grid-row-start: 3;
     grid-column: 2/3;
     justify-self: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .titleWrapper{
