--- a/src/pages/Favorites/favorites.module.css
+++ b/src/pages/Favorites/favorites.module.css
@@ -95,70 +95,44 @@
     /* max-width: 1537px; */
     width: 100%;
     /* overflow-x: hidden; */
-    overflow-x: auto;
+    /* overflow-x: auto; */
 }
 
-.favoritesline {
-    padding: 0 246px;
-    display: flex;
-    flex-direction: row;
-    gap: 40px;
-}
-
-.favoritesline>div {
-    min-width: 460px;
-}
-
-.comparecontainer::-webkit-scrollbar {
-    display: none;
-}
-
-.fakecontainer{
-    margin: 60px 0 43px 0;
-    height: 10px;
-    max-width: 1537px;
+.swiperwrapper {
+    margin-top: 60px;
+    max-width: 100vw;
     width: 100%;
-    padding: 0 46px;
-    overflow-x: auto;
-}
-.fakecontent{
-    display: flex;
-    flex-direction: row;
-    gap: 40px;
-    padding: 0 246px 0 0;
 }
 
-.last{
-    min-width: 240px !important;
-}
 
-.fakecontainer::-webkit-scrollbar {
-    display: block;
-    overflow-x: auto;
-    height: 10px;
+@media (max-width: 1240px) {
+    .favoritesgrid {
+        padding-top: 32px;
+    }
 }
-
-.fakecontainer::-webkit-scrollbar-track {
-    background-color: var(--border);
-    border: 4.5px solid transparent;
-    background-clip: content-box;
-}
-
-.fakecontainer::-webkit-scrollbar-thumb:horizontal {
-    background-color: var(--green);
-    border-radius: 3px;
-    cursor: pointer;
-}
-
-.fakecontent>div {
-    min-width: 460px;
-    height: 2px;
-}
-
 
 @media (max-width: 900px) {
     .favoritesgrid {
         grid-template-columns: 1fr 1fr;
+        gap: 11px;
+    }
+}
+
+
+@media (max-width: 745px) {
+    .tab {
+        padding: 5px 15px;
+        font-size: 10px;
+        line-height: 24px;
+    }
+    .favoritesgrid {
+        padding-top: 27px;
+    }
+}
+
+@media (max-width: 346px) {
+    .favoritesgrid {
+        grid-template-columns: 1fr;
         gap: 11px;
     }
 }
