--- a/src/index.css
+++ b/src/index.css
@@ -112,6 +112,8 @@ h1,h2,h3,h4,h5,h6{font-size: inherit;font-weight: 400;}
     --gray-line: hsla(0, 0%, 89%, 1);
     --scroll: hsla(0, 0%, 0%, 0.12);
     --map-label: hsla(219, 39%, 17%, 1);
+    --sold: hsla(0, 0%, 76%, 1);
+    --blue-transparent: hsla(222, 64%, 27%, 0.3);
 
     --medicine: hsla(210, 62%, 47%, 1);
     --education: hsla(167, 49%, 69%, 1);
