--- a/src/components/filterAndTabs/houseCard/houseCard.module.css
+++ b/src/components/filterAndTabs/houseCard/houseCard.module.css
@@ -180,6 +180,9 @@
 
 .flatType {
     color: var(--green-text);
+    font-size: 16px;
+    line-height: 21px;
+
 }
 
 .flatPrice {
@@ -210,7 +213,7 @@
 }
 
 @media (min-width: 1241px) and (max-width: 1600px) {
-    .houseCard{
+    .houseCard {
         height: 500px;
     }
 
