--- a/src/pages/Favorites/favorites.module.css
+++ b/src/pages/Favorites/favorites.module.css
@@ -1,16 +1,19 @@
-.dashnav {
+.dashNav {
+    margin-top: 98px;
     padding-top: 24px;
 }
 
 @media (max-width: 1240px) {
-    .dashnav {
-        padding-top: 82px;
+    .dashNav {
+        margin-top: 80px;
+        padding-top: 22px;
     }
 }
 
 @media (max-width: 745px) {
-    .dashnav {
-        padding-top: 122px;
+    .dashNav {
+        margin-top: 139px;
+        padding-top: 27px;
     }
 }
 
