--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -4,7 +4,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
+    position: fixed;
+    background-color: var(--white);
+    z-index: 20;
+    width: 100%;
+    height: 98px;
 }
 
 .headerGray {
@@ -14,6 +18,10 @@
 .headerLine {
     padding-bottom: 32px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+}
+
+.headerShadow{
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.06);
 }
 
 .header a {
@@ -183,6 +191,10 @@
 }
 
 @media (max-width: 1240px) {
+    .header{
+        height: 73px;
+    }
+
     .navMenu {
         position: fixed;
     }
