--- a/src/pages/NoMatch/noMatch.module.css
+++ b/src/pages/NoMatch/noMatch.module.css
@@ -2,21 +2,28 @@
     overflow: hidden;
 }
 
-.dashnav {
+.dashNav {
+    margin-top: 98px;
     padding-top: 24px;
+    padding-bottom: 46px;
 }
 
 @media (max-width: 1240px) {
-    .dashnav {
-        padding-top: 82px;
+    .dashNav {
+        margin-top: 80px;
+        padding-top: 22px;
+        padding-bottom: 49px;
     }
 }
 
 @media (max-width: 745px) {
-    .dashnav {
-        padding-top: 122px;
+    .dashNav {
+        margin-top: 139px;
+        padding-top: 27px;
+        padding-bottom: 24px;
     }
 }
+
 
 .content {
     padding: 86px 0 125px 0;
@@ -209,10 +216,11 @@
 /* nopage */
 
 .errorcontent {
+    margin-top: 98px;
+    padding: 104px 0 134px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 104px 0 134px 0;
 }
 
 .container {
@@ -252,14 +260,16 @@
 }
 
 @media (max-width: 1240px) {
-    .errorcontent {
-        padding: 144px 0 47px 0;
+    .errorcontent{
+        margin-top: 80px;
+        padding: 89px 0 47px 0;
     }
 }
 
 @media (max-width: 745px) {
     .errorcontent {
-        padding: 160px 0 119px 0;
+        margin-top: 139px;
+        padding: 59px 0 119px 0;
     }
 
     .container{
