--- a/src/components/companyFull/achievements/achievements.module.css
+++ b/src/components/companyFull/achievements/achievements.module.css
@@ -16,6 +16,11 @@
 .achievement {
     display: flex;
     flex-direction: column;
+    transition: var(--transition);
+}
+
+.achievement:hover{
+    transform: scale(1.05);
 }
 
 .img {
